--- a/index.html
+++ b/index.html
@@ -128,6 +128,40 @@
                     </p>
                 </div>
             </section>
+            
+            <section class="py-12 bg-white">
+    <div class="max-w-6xl mx-auto px-4">
+                          <div class="text-center mb-12" data-aos="fade-up">
+                        <h2 class="text-3xl font-bold mb-2">
+                            Mengapa Harus <span class="text-orange-600">Kami</span>
+                        </h2>
+                        <div class="h-1 w-20 bg-orange-600 mx-auto"></div>
+                    </div>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
+            <div data-aos="zoom-in">
+                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-check-circle"></i></div>
+                <p class="font-bold">Bahan Segar</p>
+                <p class="text-xs text-slate-500">Belanja tiap pagi</p>
+            </div>
+            <div data-aos="zoom-in" data-aos-delay="100">
+                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-utensils"></i></div>
+                <p class="font-bold">Rasa Otentik</p>
+                <p class="text-xs text-slate-500">Resep turun temurun</p>
+            </div>
+            <div data-aos="zoom-in" data-aos-delay="200">
+                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-certificate"></i></div>
+                <p class="font-bold">100% Halal</p>
+                <p class="text-xs text-slate-500">Jaminan kebersihan</p>
+            </div>
+            <div data-aos="zoom-in" data-aos-delay="300">
+                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-truck"></i></div>
+                <p class="font-bold">Tepat Waktu</p>
+                <p class="text-xs text-slate-500">Area Banyuwangi</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
             <section id="produk" class="py-20 px-4">
                 <div class="max-w-6xl mx-auto">
